# labelImg

./: .gitignore  check_and_run.bat  compile_resources.bat  full_install_run.bat  labelImg.py  run.bat  run.ps1  setup.py  simple_test.py
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/docs/: feature-parity-design.md
cpp/packaging/: build_windows_installer.ps1
cpp/src/: main.cpp
cpp/src/core/: AnnotationIO.cpp  AnnotationIO.h  LabelListModel.cpp  LabelListModel.h  PerformanceMonitor.cpp  PerformanceMonitor.h  ResourcePaths.cpp  ResourcePaths.h  Shape.cpp  Shape.h  StringBundle.cpp  StringBundle.h
cpp/src/ui/: Canvas.cpp  Canvas.h  FramelessTitleBar.cpp  FramelessTitleBar.h  MainWindow.cpp  MainWindow.h  MiniMapOverlay.cpp  MiniMapOverlay.h
cpp/tests/: test_core.cpp  test_ui.cpp
libs/: canvas.py  colorDialog.py  combobox.py  constants.py  default_label_combobox.py  hashableQListWidgetItem.py  labelDialog.py  labelFile.py  lightWidget.py  shape.py  stringBundle.py  toolBar.py  ustr.py  utils.py  zoomWidget.py
requirements/: requirements-linux-python3.txt
resources/strings/: strings-zh-CN.properties  strings.properties
tests/: test_qt.py  test_settings.py  test_stringBundle.py
